--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">RSS</string>
-    <string name="rss_url">https://news.google.com/rss</string>
+    <string name="rss_url">https://news.google.com/rss?hl=ko</string>
 </resources>
