--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">RSS</string>
+    <string name="app_name">Today RSS</string>
+    <string name="main_activity_name">구글 뉴스</string>
+    <string name="news_activity_name">뉴스 원문</string>
     <string name="rss_url">https://news.google.com/rss?hl=ko</string>
 </resources>
