--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -3,5 +3,11 @@
     <string name="app_name">Today RSS</string>
     <string name="main_activity_name">구글 뉴스</string>
     <string name="news_activity_name">뉴스 원문</string>
+<!--    rss-->
     <string name="rss_url">https://news.google.com/rss?hl=ko</string>
+<!--    splash-->
+    <string name="version_code">v 1.0</string>
+    <string name="label_1">최신 뉴스를 제공합니다.</string>
+    <string name="label_2">뉴스 키워드를 알아보세요</string>
+    <string name="label_3">뉴스를 클릭하면 원본 뉴스를 볼 수 있습니다.</string>
 </resources>
