--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -10,4 +10,6 @@
     <string name="label_1">최신 뉴스를 제공합니다.</string>
     <string name="label_2">뉴스 키워드를 알아보세요</string>
     <string name="label_3">뉴스를 클릭하면 원본 뉴스를 볼 수 있습니다.</string>
+<!--    error-->
+    <string name="internet_error">인터넷 연결이 필요합니다.</string>
 </resources>
