--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -12,4 +12,5 @@
     <string name="label_3">뉴스를 클릭하면 원본 뉴스를 볼 수 있습니다.</string>
 <!--    error-->
     <string name="internet_error">인터넷 연결이 필요합니다.</string>
+    <string name="parsing_error">본문 파싱 실패</string>
 </resources>
